<resources>
    <string name="app_name">AgendaApp</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="title_activity_main">Agenda</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="crear">Crear</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="formulario">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo electrónico</string>
    <string name="cumple">Seleccione fecha de nacimiento</string>
    <string name="lat">Lat</string>
    <string name="longi">Long</string>
    <string name="buscar">Buscar</string>
    <string name="borrar">Borrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="title_activity_maps">Map</string>
    <string name="verMapa">Ver ubicación</string>
    <string name="title_activity_menu">Mi Agenda</string>
</resources>
