<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.edwinacubillos.agendaapp.FormularioActivity">

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/eTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="number" />

    <EditText
        android:id="@+id/eCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/eLat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lat" />

        <EditText
            android:id="@+id/eLong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/longi" />

    </LinearLayout>

    <TextView
        android:id="@+id/tCumple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="fechaCumple"
        android:text="@string/cumple"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="crear"
        android:text="@string/crear" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buscar"
        android:text="@string/buscar" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="actualizar"
        android:text="@string/actualizar" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="borrar"
        android:text="@string/borrar" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mapa"
        android:text="@string/verMapa" />


</LinearLayout>
